Now the realtime data comes as string. Using JSON parse to parse the data

--- a/src/aq-app/aq-app.html
+++ b/src/aq-app/aq-app.html
@@ -437,6 +437,8 @@
         },
 
         goToRoute: function(e) {
+
+            this.reload = e.detail.reload;
             var route = this.redirect(e.detail.route);
             
             var idx = route.indexOf('?');
