Changed environment variable to use secure connections

--- a/resources/aq-environment.html
+++ b/resources/aq-environment.html
@@ -1,9 +1,8 @@
-<!--link rel="import" href="../bower_components/iron-meta/iron-meta.html"-->
 
-<iron-meta key="APIEndPoint" value="http://stagingapi.aimsquant.com/api/v2"></iron-meta>
+<iron-meta key="APIEndPoint" value="https://stagingapi.aimsquant.com/api/v2"></iron-meta>
 
-<iron-meta key="WSEndPoint" value="ws://stagingapi.aimsquant.com"></iron-meta>
+<iron-meta key="WSEndPoint" value="wss://stagingapi.aimsquant.com"></iron-meta>
 
-<!--<iron-meta key="APIEndPoint" value="http://localhost:3002/api/v2"></iron-meta>-->
+<!--iron-meta key="APIEndPoint" value="http://localhost:3002/api/v2"></iron-meta>
 
-<!--<iron-meta key="WSEndPoint" value="ws://localhost:3002"></iron-meta>-->
+<iron-meta key="WSEndPoint" value="ws://localhost:3002"></iron-meta-->
