1. Analyze backtest is now highlighted when the first backtest is launched 2. Added button to launch full-detail of backtest after completion instead routing automatically 3. Added support for unfollowing a thread from email notification 4. Changed post reply response. Now, only a success message is relayed back and not all replies

--- a/src/aq-app/aq-app.html
+++ b/src/aq-app/aq-app.html
@@ -237,6 +237,7 @@
             'update-token':'onTokenUpdate',
             'scroll-top':'scrollToTop',
             'rt-changed':'goToRoute',
+            'rt-reload':'reloadRoute',
             'update-localstorage-community':'updateCommunityState',
             'update-localstorage-backtest-settings':'updateBacktestSettings',
             'ajax-error':'onAjaxError',
@@ -462,6 +463,10 @@
             //find a way to update currentUrl ...should listen to window
             // haschange event
             this.currentUrl = route;
+        },
+
+        reloadRoute: function() {
+            window.location.reload(true);
         },
 
         computePage: function(currentUrl) {
