--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="manifest" href="/manifest.json">
-    <!--script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-    <script src="/bower_components/highcharts/highstock.js"></script>
-    <link rel='import' href="/bower_components/iron-meta/iron-meta.html"-->
-    
     <link rel="stylesheet" href="/resources/scripts/highlight/styles/docco.css">
     <script src="/resources/scripts/highlight/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
@@ -23,12 +19,55 @@
         font-family: 'Lato', sans-serif;
         background-color: #fff;
       }
+
+      #no-browser-support {
+         padding: 10px;
+         color: teal;
+      }
     </style>
     <link rel="shortcut icon" type="image/png" href="/resources/images/favicon.png">
+
+    <script>
+      function createElement(e) {
+        if(isChrome()){
+            var element = document.createElement('aq-app');
+        } else {
+            var element = document.createElement('div');
+            element.innerHTML = "Your browser is not supported currently. Please use the latest Google Chrome for the best experience.";
+            element.setAttribute('id', 'no-browser-support');
+            document.body.appendChild(element);
+        }
+
+        document.body.appendChild(element);
+      }
+
+      function isChrome() {
+        var isChromium = window.chrome,
+          winNav = window.navigator,
+          vendorName = winNav.vendor,
+          isOpera = winNav.userAgent.indexOf("OPR") > -1,
+          isIEedge = winNav.userAgent.indexOf("Edge") > -1,
+          isIOSChrome = winNav.userAgent.match("CriOS");
+
+        if (isIOSChrome) {
+          return true;
+        } else if (
+          isChromium !== null &&
+          typeof isChromium !== "undefined" &&
+          vendorName === "Google Inc." &&
+          isOpera === false &&
+          isIEedge === false
+        ) {
+          return true;
+        } else { 
+          return false;
+        }
+      }
+
+    </script>
   </head>
 
-  <body class="fullbleed layout vertical">
+  <body class="fullbleed layout vertical" onload="createElement()">
     <span id="browser-sync-binding"></span>
-    <aq-app></aq-app>
   </body>
 </html>
