Google analytics was not working as expected. Fixed!!

--- a/resources/aq-environment.html
+++ b/resources/aq-environment.html
@@ -6,3 +6,5 @@
 <!--iron-meta key="APIEndPoint" value="http://localhost:3002/api/v2"></iron-meta>
 
 <iron-meta key="WSEndPoint" value="ws://localhost:3002"></iron-meta-->
+
+<iron-meta key="gaKey" value="UA-111254422-1"></iron-meta>
