--- a/src/dialog/aq-editor-strategy-input-dialog.html
+++ b/src/dialog/aq-editor-strategy-input-dialog.html
@@ -143,7 +143,7 @@
         this.reset();
         this.$.createStrategyModalDialog.close();
         //console.log(window.history.back());
-        //this.fire('rt-changed',{route:'/dashboard/editor'});
+        //this.fire('rt-changed',{route:'/research/editor'});
       },
 
 			open: function(type) {
