Changed home page title Undo "strategy change" observer in analyze-home

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Backtest investment stategies for Indian Equity Markets</title>
+    <title>Backtest investment stategies for Indian Equity Markets | AimsQuant</title>
     <meta name="description" content="Build, test and research investment stategies with in-built code editor and data from Indian Equity markets. Run unlimited backtests and visualize performance of investment strategies with variety of metrics">
     
     <meta charset="utf-8">
