Added titles to user login based pages

--- a/src/aq-app/aq-app.html
+++ b/src/aq-app/aq-app.html
@@ -326,7 +326,7 @@
         onSignOut: function() {     
             this.removeToken();
             //this.hasToken = this.$.authItem.checkHasToken();
-            //this.fire('rt-changed',{route:'/user/signout'});
+            this.fire('rt-changed',{route:'/user/signout'});
         },
 
         openFeedbackDialog: function() {
